--- a/project/package.json
+++ b/project/package.json
@@ -1,11 +1,12 @@
 {
     "scripts": {
         "// -- dev -- //": "",
-        "clean": "",
+        "clean": "rimraf site",
         "prune": "npm prune && npm i --package-lock --ignore-scripts",
         "update": "npm update -D && npm i --package-lock --ignore-scripts && npm prune",
         "// -- build -- //": "",
-        "build": "node build.js"
+        "build": "node build.js",
+        "prepare": "npm run clean && npm run build"
     },
     "repository": {
         "type": "git",
@@ -14,7 +15,8 @@
     "license": "CC-BY-NC-SA-4.0",
     "homepage": "https://github.com/Katsute/Baruch-CIS-3630#readme",
     "devDependencies": {
-        "@types/node": "18.14.2",
-        "rimraf": "4.3.0"
+        "bootstrap": "5.2.3",
+        "rimraf": "4.3.1",
+        "sass": "1.58.3"
     }
 }
