--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,8 @@
 			"extensions": [
 				"meganrogge.template-string-converter",
 				"ritwickdey.LiveServer",
-				"shardulm94.trailing-spaces"
+				"shardulm94.trailing-spaces",
+				"ecmel.vscode-html-css"
 			]
 		}
 	},
