--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
 				"meganrogge.template-string-converter",
 				"ritwickdey.LiveServer",
 				"shardulm94.trailing-spaces",
-				"ecmel.vscode-html-css"
+				"ecmel.vscode-html-css",
+				"bradlc.vscode-tailwindcss"
 			]
 		}
 	},
