--- a/project/package.json
+++ b/project/package.json
@@ -17,6 +17,6 @@
     "devDependencies": {
         "bootstrap": "5.2.3",
         "rimraf": "4.4.1",
-        "sass": "1.59.3"
+        "tailwindcss": "3.3.0"
     }
 }
