--- a/project/package.json
+++ b/project/package.json
@@ -5,7 +5,8 @@
         "prune": "npm prune && npm i --package-lock --ignore-scripts",
         "update": "npm update -D && npm i --package-lock --ignore-scripts && npm prune",
         "// -- build -- //": "",
-        "build": "node build.js",
+        "build:tw": "tailwindcss -m -i src/dependencies/css/tailwind.css -o site/dependencies/css/tailwind.css",
+        "build": "node build.js && npm run build:tw",
         "prepare": "npm run clean && npm run build"
     },
     "repository": {
@@ -15,7 +16,6 @@
     "license": "CC-BY-NC-SA-4.0",
     "homepage": "https://github.com/Katsute/Baruch-CIS-3630#readme",
     "devDependencies": {
-        "bootstrap": "5.2.3",
         "rimraf": "4.4.1",
         "tailwindcss": "3.3.0"
     }
