--- a/project/package.json
+++ b/project/package.json
@@ -16,6 +16,7 @@
     "license": "CC-BY-NC-SA-4.0",
     "homepage": "https://github.com/Katsute/Baruch-CIS-3630#readme",
     "devDependencies": {
+        "@fontsource/lexend-deca": "4.5.14",
         "html-format": "1.0.2",
         "liquidjs": "10.7.0",
         "tailwindcss": "3.3.0"
