--- a/project/package.json
+++ b/project/package.json
@@ -19,6 +19,7 @@
         "@fontsource/lexend-deca": "4.5.14",
         "html-format": "1.0.2",
         "liquidjs": "10.7.0",
-        "tailwindcss": "3.3.0"
+        "tailwindcss": "3.3.1",
+        "yaml": "2.2.1"
     }
 }
