update deps, fix cc

--- a/project/package.json
+++ b/project/package.json
@@ -3,7 +3,7 @@
         "// -- dev -- //": "",
         "clean": "node clean.js",
         "prune": "npm prune && npm i --package-lock --ignore-scripts",
-        "update": "npm update -D && npm i --package-lock --ignore-scripts && npm prune",
+        "update": "npm update -D && npm i --package-lock --ignore-scripts && npm run prune",
         "// -- build -- //": "",
         "build:tw": "tailwindcss -i src/dependencies/css/tailwind.css -o site/dependencies/css/tailwind.css && node build-post.js",
         "build": "node build.js && npm run build:tw",
