--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 project/site/** linguist-generated
-project/src/dependencies/css/style.scss -linguistvendored
+
+lab/lab6/birdwalk/gallery linguist-vendored
