--- a/project/data/benefits.yml
+++ b/project/data/benefits.yml
@@ -1,10 +1,8 @@
- - title: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-   body: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et saepe perspiciatis atque ad voluptatem distinctio illum quam ipsam nostrum tempore?
- - title: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-   body: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et saepe perspiciatis atque ad voluptatem distinctio illum quam ipsam nostrum tempore?
- - title: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-   body: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et saepe perspiciatis atque ad voluptatem distinctio illum quam ipsam nostrum tempore?
- - title: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-   body: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et saepe perspiciatis atque ad voluptatem distinctio illum quam ipsam nostrum tempore?
- - title: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-   body: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et saepe perspiciatis atque ad voluptatem distinctio illum quam ipsam nostrum tempore?
+ - title: Low Cost
+   body: Save as much as 25% up to $5,000 in government tax credits. Save even more on your energy bill month after month.
+ - title: Home Value
+   body: A low cost investment that adds value to your home. Solar customers on average gain $15,000 in home value immediately after installation.
+ - title: Always On
+   body: Blackouts are a thing of the past, solar keeps the lights on.
+ - title: Universal
+   body: Solar panels can be fit to any roof layout.
