update content, fix ring on mobile

--- a/project/data/benefits.yml
+++ b/project/data/benefits.yml
@@ -6,3 +6,11 @@
    body: Blackouts are a thing of the past, solar keeps the lights on.
  - title: Universal
    body: Solar panels can be fit to any roof layout.
+ - title: Any Location
+   body:
+ - title: Minimal Maintenance
+   body:
+ - title: Reliable
+   body:
+ - title: Sustainable
+   body:
