update description, storage

--- a/project/data/benefits.yml
+++ b/project/data/benefits.yml
@@ -1,16 +1,14 @@
  - title: Low Cost
-   body: Save as much as 25% up to $5,000 in government tax credits. Save even more on your energy bill month after month.
+   body: Save as much as 30% in government tax credits. Save even more on your energy bill month after month.
  - title: Home Value
    body: A low cost investment that adds value to your home. Solar customers on average gain $15,000 in home value immediately after installation.
- - title: Always On
+ - title: Energy Independence
    body: Blackouts are a thing of the past, solar keeps the lights on.
- - title: Universal
+ - title: Any Roof
    body: Solar panels can be fit to any roof layout.
  - title: Any Location
-   body:
+   body: From north Alaska to southern Texas, solar panels work anywhere in the nation.
  - title: Minimal Maintenance
-   body:
- - title: Reliable
-   body:
+   body: Solar panels are built to last, on average $400 annually in maintenance.
  - title: Sustainable
-   body:
+   body: Lower or completely offset your carbon footprint.
